// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Film Festivals Peckhamplex retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "18",
      "directors": [
        "David Lynch",
      ],
      "duration": 7200000,
      "year": "1986",
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://freefilmfestivals.org/event/blue-velvet/",
        "format": {},
        "notes": "Part of the Peckham & Nunhead Free Film Festival",
        "status": {},
        "time": 1788548400000,
      },
    ],
    "showingId": "freefilmfestivals.org-blue-velvet",
    "title": "Blue Velvet",
    "url": "https://freefilmfestivals.org/event/blue-velvet/",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "15",
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://freefilmfestivals.org/event/pnfff-short-film-night/",
        "format": {},
        "notes": "Part of the Peckham & Nunhead Free Film Festival",
        "status": {},
        "time": 1788980400000,
      },
    ],
    "showingId": "freefilmfestivals.org-pnfff-short-film-night",
    "title": "PNFFF Short Film Night",
    "url": "https://freefilmfestivals.org/event/pnfff-short-film-night/",
  },
]
`;

exports[`Free Film Festivals The Feminist Library retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "18",
      "directors": [
        "Amy Holden Jones",
      ],
      "duration": 4560000,
      "year": "1982",
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://freefilmfestivals.org/event/the-slumber-party-massacre/",
        "format": {},
        "notes": "Part of the Peckham & Nunhead Free Film Festival",
        "status": {},
        "time": 1789236000000,
      },
    ],
    "showingId": "freefilmfestivals.org-the-slumber-party-massacre",
    "title": "The Slumber Party Massacre",
    "url": "https://freefilmfestivals.org/event/the-slumber-party-massacre/",
  },
]
`;

exports[`Free Film Festivals The Ivy House retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://freefilmfestivals.org/event/pre-festival-film-pub-quiz-2/",
        "format": {},
        "notes": "Part of the Peckham & Nunhead Free Film Festival",
        "status": {},
        "time": 1788375600000,
      },
    ],
    "showingId": "freefilmfestivals.org-pre-festival-film-pub-quiz-2",
    "title": "Pre-Festival Film Pub Quiz",
    "url": "https://freefilmfestivals.org/event/pre-festival-film-pub-quiz-2/",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "12",
      "directors": [
        "Kelly Reichardt",
      ],
      "duration": 6600000,
      "year": "2025",
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://freefilmfestivals.org/event/the-mastermind/",
        "format": {},
        "notes": "Part of the Peckham & Nunhead Free Film Festival",
        "status": {},
        "time": 1788719400000,
      },
    ],
    "showingId": "freefilmfestivals.org-the-mastermind",
    "title": "The Mastermind",
    "url": "https://freefilmfestivals.org/event/the-mastermind/",
  },
]
`;
